# Crypto-Strategy-Lab

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  docker-compose.yml  ghpush.sh  pyproject.toml  requirements-monitoring.txt  requirements.txt  setup.py
.github/workflows/: research-to-production.yml  run-tests.yml
config/: base.yaml  data_sources.yaml
config/strategies/: drift_significance.yaml  hurst_exponent.yaml  lag_autocorr.yaml  pacf_spike.yaml  permutation_entropy.yaml  spectral_entropy.yaml  spectral_peaks.yaml  true_range_divergence.yaml  variance_ratio.yaml  volatility_clustering.yaml  vpin.yaml  wavelet_energy.yaml
docs/: BLUEPRINT.md  CONTRIBUTING.md  STRATEGY_GUIDE.md  TEAM.md
docs/pdf_src/: drift_significance.tex  hurst_exponent.tex  permutation_entropy.tex  spectral_peaks.tex  variance_ratio.tex  volatility_clustering.tex
examples/: enhanced_backtest_demo.py
scripts/: backtest_bitcoin.py  deploy_live.sh  fetch_btc_data.py  fetch_data.py  monitoring_dashboard.py  new_strategy.py  paper_trade.sh  run_hyperopt.py  validate_config.py
src/: __init__.py  __main__.py  cli.py  main_cli.py
src/backtesting/: __init__.py  enhanced_backtester.py  portfolio_manager.py
src/cli/: __init__.py  backtest.py  live.py  monitor.py  paper.py  validate.py
src/core/: backtest.py  backtest_engine.py  features.py  position.py  renaissance_pipeline.py  unified_backtest.py  validation.py
src/data/: __init__.py  data_manager.py  fetcher.py  preprocessor.py  unified_data_manager.py
src/data/providers/: __init__.py  base_provider.py  exchange_provider.py  fmp_provider.py  provider_factory.py  yfinance_provider.py
src/exchanges/: __init__.py  alpaca_adapter.py  base_exchange.py  bybit_adapter.py  exchange_factory.py
src/execution/: __init__.py  engine.py  latency.py
src/metrics/: __init__.py  calculator.py  reporter.py
src/pipelines/: hyperopt.py
src/strategies/: __init__.py  base_strategy.py
src/strategies/drift_significance/: __init__.py  signal.py  test_signal.py
src/strategies/hurst_exponent/: __init__.py  signal.py  test_hurst_exponent_signal.py  test_signal_comprehensive.py  test_signal_new.py
src/strategies/lag_autocorr/: __init__.py  signal.py  test_lag_autocorr_signal.py  test_signal.py
src/strategies/pacf_spike/: __init__.py  signal.py  test_pacf_spike_signal.py  test_signal.py
src/strategies/permutation_entropy/: __init__.py  signal.py  test_signal.py
src/strategies/spectral_entropy/: __init__.py  signal.py  test_signal.py  test_spectral_entropy_signal.py
src/strategies/spectral_peaks/: __init__.py  signal.py  test_signal.py  test_spectral_peaks_signal.py
src/strategies/true_range_divergence/: __init__.py  signal.py  test_true_range_divergence_signal.py
src/strategies/variance_ratio/: __init__.py  signal.py  test_signal_new.py  test_variance_ratio_signal.py
src/strategies/volatility_clustering/: __init__.py  signal.py  test_signal.py  test_volatility_clustering_signal.py
src/strategies/vpin/: __init__.py  signal.py  test_vpin_signal.py
src/strategies/wavelet_energy/: __init__.py  strategy.py  test_signal.py  test_wavelet_energy_signal.py
src/utils/: __init__.py  config_utils.py  consolidation_utils.py  data_utils.py  feature_engineering.py  math_utils.py  performance_utils.py  risk_utils.py  technical_indicators.py
src/visualization/: __init__.py  advanced_dashboard.py  backtest_analyzer.py
tests/: test_comprehensive_system.py  test_fmp_direct.py  test_multi_exchange.py  test_unified_system.py
